# readyAiExample

./: .gitignore  README.md  pyproject.toml  run.py
data/bossmen/: .profile  documents.jsonl
data/bossmen/docs/: .上線手冊引導_資料需求單-博士門.pdf.e2f7fb494f07f602bc74d9e4378beae3.cache
data/elig-tw/elig-tw-demo/: documents.jsonl  documents.xml
data/kangyang/: .profile
data/kangyang/docs/: .康揚2025英文目錄.pdf.c7cd26f1533bcd9d81b4ef0af5bc1dd5.cache
data/tofu-machine/: .profile  tofu-machine0-409-new.xml.txt
file_browser/: app.py
file_browser/static/css/: style.css
file_browser/templates/: browse.html  index.html  layout.html  view.html
kangyang/: documents.jsonl  documents.xml
kangyang/docs/: .康揚2025中文目錄.pdf.0e60ca646544e4cd7d32143f31cbd7aa.cache  .康揚上線手冊 - 初次訪談資料需求單_Ver 5.pdf.d5a3c22c7d91de284ead402be5d729c1.cache
kangyang/website/en/: .website-outline
kangyang/zh-tw-v2/: .website-outline
kangyang/zh-tw-v2/category/: .3c-electronics-industry.think  .anti-counterfeit-label.reference  .application-industry.reference  .application-industry.think  .beverage-industry.reference  .booklet-label.reference  .chemical-industry.reference  .double-layer-label.reference  .double-sided-label.think  .embossing-label.reference  .environmental-label.reference  .environmental-label.think  .environmental-material-label.think  .laser-label-material.reference  .laser-label-material.think  .material.reference  .material.think  .pet-gifts.think  .polyester-label.reference  .printing-process.reference  .printing-process.think  .promotion-label.reference  (+29 more)
tofu-machine/: documents.jsonl
(+2098 files in other folders)
