[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "file_browser"
version = "0.1.0"
description = "文件瀏覽器"
requires-python = ">=3.8"
dependencies = [
    "flask>=2.0.0",
    "markdown>=3.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["file_browser"]
